# detector-onnx-linux

./: .gitignore  CMakeLists.txt  README.md
include/: api.h  constants.h  detector.h  onnx.h  utils.h
src/: api.cpp  detector.cpp  onnx.cpp  utils.cpp
test/: main.py
